--- a/conf/ds-discover-behaviour.yaml
+++ b/conf/ds-discover-behaviour.yaml
@@ -13,6 +13,12 @@ limits:
   max: 10000
 
 solr:
+  # Whether SolrShield is enabled. If false, SolrShield evaluation is still performed but the response is only logged.
+  enabled: false
+
+  # The default max weight should be kept conservative and perhaps even disabled by setting it to -1.
+  default_max_weight: 2000
+
   # If permissive is false, only vetted Solr parameters are accepted
   # If permissive is true, all Solr parameters are passed on and non-vetted parameters are logged
   # Intended for development purposes.
