Adjust weight and messages for SolrShield

--- a/conf/ds-discover-behaviour.yaml
+++ b/conf/ds-discover-behaviour.yaml
@@ -16,7 +16,8 @@ solr:
   # Whether SolrShield is enabled. If false, SolrShield evaluation is still performed but the response is only logged.
   enabled: false
 
-  # The default max weight should be kept conservative and perhaps even disabled by setting it to -1.
+  # Current max weight is very likely to be too low for practical use.
+  # More experimenting with SolrShield is needed in order to determine a proper max weight
   default_max_weight: 2000
 
   # If permissive is false, only vetted Solr parameters are accepted
