--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,24 @@
             </exclusion>
         </exclusions>
       </dependency>
+        <dependency>
+            <groupId>dk.kb.present</groupId>
+            <artifactId>ds-present</artifactId>
+            <version>1.7</version>
+            <type>jar</type>
+            <classifier>classes</classifier>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.saxon</groupId>
+            <artifactId>Saxon-HE</artifactId>
+            <version>10.6</version>
+        </dependency>
 
         <!-- Apache CXF and servlet stuff -->
         <dependency>
