--- a/conf/ds-discover-behaviour.yaml
+++ b/conf/ds-discover-behaviour.yaml
@@ -7,7 +7,8 @@
 #
 # This config is controlled by the individual developer and is not part of the code repository.
 #
-url: http://localhost:9074/ds-discover/v1
+openapi:
+  url: http://localhost:9074/ds-discover/v1
 # Local experimenting with limits
 limits:
   max: 10000
