--- a/conf/ds-discover-behaviour.yaml
+++ b/conf/ds-discover-behaviour.yaml
@@ -14,8 +14,36 @@ limits:
 
 solr:
 
+  # /select specific config
+  select:
+    # Parameters that are default for all queries, but can be overridden by the request.
+    # The values of the params are either scalars or lists of scalars.
+    # Unless there are special reasons not to, default params should be specified
+    # in solrconfig.xml.
+    # The 'fq' param has no special status here: If the request contains 1 or more fq
+    # values, they will override any fq specified under defaultparams.
+    defaultparams:
+      # Compensate for a Solr bug causing crashes when the config has this
+      # parameter as default for the /select handler.
+      # This param should be made part of solrconfig.xml when the Solr bug
+      # has been resolved
+      maxCollationRetries: 10
+    # Parameters that are forced for all queries, overriding params from the request.
+    # The values of the params are either scalars or lists of scalars.
+    # The param 'fq' is special as it appends to any existing 'fq' while all other
+    # params are overwritten
+    forcedparams:
+
+  # /mlt specific config
+  mlt:
+    # Unless there are special reasons not to, default params should be specified
+    # in solrconfig.xml. See solr.select for description of default- and forced-params
+    defaultparams:
+    forcedparams:
+
   shield:
-    # Whether SolrShield is enabled. If false, SolrShield evaluation is still performed but the response is only logged.
+    # Whether SolrShield is enabled.
+    # If false, SolrShield evaluation is still performed but the response is only logged.
     enabled: false
 
     # Current max weight is very likely to be too low for practical use.
