Update timestamp generation

--- a/src/main/resources/ds-discover.build.properties
+++ b/src/main/resources/ds-discover.build.properties
@@ -1,7 +1,7 @@
 # Build Time Information
 APPLICATION.NAME=${pom.name}
 APPLICATION.VERSION=${pom.version}
-APPLICATION.BUILDTIME=${maven.build.timestamp}
+APPLICATION.BUILDTIME=${timestamp}
 GIT.COMMIT.CHECKSUM=${git.commit.id}
 GIT.BRANCH=${git.branch}
 GIT.CURRENT.TAG=${git.tag}
