--- a/conf/ds-discover-behaviour.yaml
+++ b/conf/ds-discover-behaviour.yaml
@@ -26,8 +26,8 @@ solr:
     # Unless there are special reasons not to, default params should be specified
     # in solrconfig.xml.
     # The 'fq' param has no special status here: If the request contains 1 or more fq
-    # values, they will override any fq specified under defaultparams.
-    defaultparams:
+    # values, they will override any fq specified under defaultParams.
+    defaultParams:
       # Compensate for a Solr bug causing crashes when the config has this
       # parameter as default for the /select handler.
       # This param should be made part of solrconfig.xml when the Solr bug
@@ -37,14 +37,14 @@ solr:
     # The values of the params are either scalars or lists of scalars.
     # The param 'fq' is special as it appends to any existing 'fq' while all other
     # params are overwritten
-    forcedparams:
+    forcedParams:
 
   # /mlt specific config
   mlt:
     # Unless there are special reasons not to, default params should be specified
     # in solrconfig.xml. See solr.select for description of default- and forced-params
-    defaultparams:
-    forcedparams:
+    defaultParams:
+    forcedParams:
 
   shield:
     # Whether SolrShield is enabled.
@@ -53,7 +53,7 @@ solr:
 
     # Current max weight is very likely to be too low for practical use.
     # More experimenting with SolrShield is needed in order to determine a proper max weight
-    default_max_weight: 2000
+    defautMaxWeight: 2000
 
   # If permissive is false, only vetted Solr parameters are accepted
   # If permissive is true, all Solr parameters are passed on and non-vetted parameters are logged
@@ -82,9 +82,9 @@ solr:
         #
 
   #Minimum number of characters required for suggest
-  suggestminimumlength: 2
+  suggestMinimumLength: 2
 
 #License module is called to generate a filter query that is used when calling Solr
-licensemodule:
+licenseModule:
   url: http://localhost:9076/ds-license/v1
 
