Oauth2 enabled on /select method.
This is a copy+paste of much code from ds-image thumbnail service.
When this method is tested to work, next job will be extract common
Oauth logic to kb-util. Before doing that we needed at least two
seperate modules with the implementation to see what is in common.

--- a/pom.xml
+++ b/pom.xml
@@ -199,6 +199,22 @@
             <scope>runtime</scope>
         </dependency>-->
 
+        <!-- OAuth  support -->
+        <!-- https://mvnrepository.com/artifact/org.keycloak/keycloak-core -->
+        <dependency>
+            <groupId>org.keycloak</groupId>
+            <artifactId>keycloak-core</artifactId>
+            <version>24.0.1</version>
+            <exclusions>
+                <exclusion>
+                    <!-- mockserver-junit-jupiter has 1.1, but transitive resolving has 1.2.2 somewhere-->
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-core</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+
 
         <!-- To get client generation to work -->
         <!-- https://mvnrepository.com/artifact/org.openapitools/openapi-generator -->
