--- a/conf/ds-discover-behaviour.yaml
+++ b/conf/ds-discover-behaviour.yaml
@@ -104,7 +104,9 @@ security:
   mode: 'ENABLED'
   # The OAUth2 server base url, typically ending in "realms"
   # Sample: https://keycloak-keycloak.example.org/auth/realms
-  baseurl: 'https://keycloak.example.com/realms'
+  baseurl: 'https://keycloak.example.com/realms' 
+  # The authentification url with the correct realm value. Does not seem the used active by code but is required when building. (TODO?)
+  auth_url: ' https://api.example.com/oauth2/authorize'
   # Accepted realms for requests. These must be present at the OAuth2 server
   realms:
     - foo-bar
@@ -121,4 +123,5 @@ security:
     # Secret is used if the service needs to request a token from the OAuth2 server.
     # This typically used for calls between services, where there is a need for elevated access.
     secret: '01234567-89ab-cdef-0123-456789abcdef'
+   
 
