--- a/conf/ds-discover-base-solrshield.yaml
+++ b/conf/ds-discover-base-solrshield.yaml
@@ -140,7 +140,7 @@ solr:
               - collection
               - categories
               - genre
-              - renre_sub
+              - genre_sub
               - resource_description
               - resource_description_general
               - creator_full_name
